# fixed_point_privacy

./: ARTIFACT-APPENDIX.md  LICENSE  README.md  accuracy_experiment.ipynb  dataset_visualization.ipynb  distribution_privatizer_comparison.ipynb  epsilon_split_experiment.ipynb  pets_utilities.py  plotting_utilities.py  pyproject.toml  runtime_experiment.ipynb
simulations_data/: bimodal_hist.csv  binom_hist_data.csv  bird_flu.csv  data.txt  left-skewed_hist.csv  right-skewed_hist.csv  top-inflated_hist.csv  uniform_hist.csv  zero-inflated_hist.csv
